--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 	<groupId>fr.hoc.dap</groupId>
 	<artifactId>server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
-
+	<name>dap_tag</name>
 
 	<properties>
 		<pmdVersion>6.4.0</pmdVersion>
+		<!-- TODO tag by Djer |Maven| La propriété "java.version" est un raccouric (SPring Boot) pour les deux propriétés suivantes --> 
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<java.version>1.8</java.version>
@@ -50,6 +50,7 @@
 			<version>1.23.0</version>
 		</dependency>
 
+		<!-- TODO tag by Djer |Maven| Cette dependance n'est plus utile depuis qu'on gere "/OAUth2CallBack" directment (mode "Web")-->
 		<dependency>
 			<groupId>com.google.oauth-client</groupId>
 			<artifactId>google-oauth-client-jetty</artifactId>
